Updating foo examples.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,20 @@
 
 .project
 
+
+
+
+
+test/foo/foo01/Foo01/
+test/foo/foo02/Foo02/
+test/foo/foo03/Foo03/
+test/foo/foo04/Foo04/
+test/foo/foo05/Foo05/
+test/foo/foo06/Foo06/
+test/foo/foo07/Foo07/
+test/foo/foo08/Foo08/
+test/foo/foo09/Foo09/
+test/foo/foo10/Foo10/
+test/foo/foo11/Foo11/
+test/foo/foo12/Foo12/
+
